--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -17,12 +17,12 @@
 </fonts>
 
 <!-- Manifest -->
-<manifest	name="Chinese (Simplified)"
+<manifest	name="简体中文"
 		author="STC"
 		description="Shareaza Chinese(Simplified) Skin File"
 		link="http://www.p2pnet.cn/shareaza"
 		email="ShareazaSTC(AT)gmail(DOT)com"
-		version="2.1.1.3"
+		version="2.1.1.11"
 		type="Language"
 		language="chs"
 		prompt="单击这里显示简体中文"
@@ -405,7 +405,7 @@
 		<button id="ID_CHAT_EMOTICONS"/>
 		<separator/>
 		<button id="ID_CHAT_BROWSE" text="浏览用户"/>
-		<!--<button id="ID_CHAT_SEND_FILE" text="发送文件"/> -->
+		<!--<button id="ID_CHAT_SEND_FILE" text="发送文件"/>-->
 		<button id="ID_CHAT_PRIORITY" text="准予优先权"/>
 		<separator/>
 		<button id="ID_CHAT_CONNECT" text="连接" visible="false"/>
@@ -922,13 +922,13 @@
 		<item id="ID_DOWNLOADS_SOURCES" text="查找更多资源(_F)"/>
 		<!-- <separator/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETED" text="清除完成文件(_L)"/>
-		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="自动清除(_U)"/> -->
+		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="自动清除(_U)"/>-->
 		<separator/>
 		<item id="ID_DOWNLOADS_HELP" text="帮助(_H)..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Download">
 		<item id="ID_DOWNLOADS_LAUNCH" text="预览(_P)"/>
-		<!-- <item id="ID_DOWNLOADS_LAUNCH_COPY" text="预览副本(_V)"/> -->
+		<!--<item id="ID_DOWNLOADS_LAUNCH_COPY" text="预览副本(_V)"/>-->
 		<item id="ID_DOWNLOADS_ENQUEUE" text="加入播放列表(_Y)"/>
 		<item id="ID_DOWNLOADS_VIEW_REVIEWS" text="查看评价(_V)"/>
 		<separator/>
@@ -1616,7 +1616,7 @@
 		</group>
 
 		<icon group="20" command="ID_NETWORK_G2"/><gap group="20" size="4"/>
-		<text group="20" align="middle" format="b">Gnutella2:</text>
+		<text group="20" align="middle" format="b">Gnutella2: </text>
 		<text group="21" align="middle">断开连接</text>
 		<text group="22" align="middle">连接中...</text>
 		<text group="23" align="middle">已连接</text>
@@ -1625,14 +1625,14 @@
 		<newline group="20" gap="2"/>
 
 		<icon group="30" command="ID_NETWORK_ED2K"/><gap group="30" size="4"/>
-		<text group="30" align="middle" format="b">eDonkey:</text>
+		<text group="30" align="middle" format="b">eDonkey: </text>
 		<text group="31" align="middle">断开连接</text>
 		<text group="32" align="middle">连接中...</text>
 		<text group="33" align="middle">已连接</text>
 		<newline group="30" gap="2"/>
 
 		<icon group="10" command="ID_NETWORK_G1"/><gap group="10" size="4"/>
-		<text group="10" align="middle" format="b">Gnutella1:</text>
+		<text group="10" align="middle" format="b">Gnutella1: </text>
 		<text group="11" align="middle">断开连接</text>
 		<text group="12" align="middle">连接中...</text>
 		<text group="13" align="middle">已连接</text>
@@ -1669,7 +1669,7 @@
 		</para>
 	</document>
 
-	<document name="CHomeTorrentsBox" title="Torrents" leftMargin="6" topMargin="6">
+	<document name="CHomeTorrentsBox" title="Torrent" leftMargin="6" topMargin="6">
 		<styles>
 			<style name="default">
 				<font face="Tahoma" size="11"/>
@@ -2060,11 +2060,11 @@
 
 	<document name="GeneralHelp.BadTorrentEncoding"> 
 		<text format="b">此 Torrent 文件可能存在编码错误</text> 
-		<newline gap="8"/> 
+		<newline gap="8"/>
 		<text>系统在解码此 Torrent 文件中的文字时报告存在翻译错误。原因可能
 		是此 Torrent 文件已损坏，或可能是没有被正确编码。尽管文件的名称可能
 		无法正确显示，但文件仍可以正常下载。</text> 
-		<newline gap="8"/> 
+		<newline gap="8"/>
 		<text>大多数 Torrent 制作程序允许您修复此 Torrent，以便保证其在所有的
 		BitTorrent 客户端中正常工作。</text> 
 		<newline gap="8"/>
@@ -2079,6 +2079,20 @@
 		您需要下载一个较新的服务器列表 (met 文件) 以连接到 ED2K。</text>
 		<newline gap="8"/>
 		<text>您可以从 ED2K 设置页面或发现服务窗口下载服务器列表。</text>
+	</document>
+
+	<document name="GeneralHelp.UploadWarning">
+		<text format="b">限制上传可能减慢下载</text>
+		<newline gap="8"/>
+		<text>Shareaza 连接的一些网络会强制分享率，限制向
+		未共享客户端的上传，或简单地优先向已知共享者上传。</text>
+		<newline/>
+		<text>幸运的是，宽带 DSL 连接就像双向地高速公路: 您的上传和下载
+		存在独立的分配带宽。如果您的客户端已正确设置，您可以以一个较好
+		的速率上传而同时保持全速下载的能力。</text>
+		<newline gap="8"/>
+		<text>在默认设置下，您的上传限制被设定为可用上传带宽的 85%，
+		而下载未做限制。此设置将给予您最快的可能下载速率。</text>
 	</document>
 
 	<!-- Search help documents -->
@@ -2097,10 +2111,10 @@
 
 	<document name="SearchHelp.BadSearch2">
 		<text format="b">请重新措词</text>
-		<newline gap="8"/> 
+		<newline gap="8"/>
 		<text>此搜索格式不正确，可能无法正常工作。
 		所有的搜索启动需要达到最小字母、字符数的要求。</text>
-		<newline gap="8"/> 
+		<newline gap="8"/>
 		<text>虽然可以搜索通常文件的扩展名和数字，但在创建搜索时，
 		您必须同时输入其他项目进行配合。</text>
 	</document>
@@ -2109,10 +2123,10 @@
 		<text format="b">请重新措词</text>
 		<newline gap="8"/>
 		<text>此搜索可能只包含通常的文件扩展名，或没有可搜索的词。</text>
-		<newline gap="8"/> 
+		<newline gap="8"/>
 		<text>如果您设置搜索存在困难，请记住它和进行网页搜索非常类似:
 		指定一些最具有唯一性的名称、标题和关键词。</text>
-		<newline gap="8"/> 
+		<newline gap="8"/>
 		<text>常规的条件无法进行有效的搜索并且可能导致
 		较差的搜索性能，如在搜索时使用较高的带宽。</text>
 		<newline gap="8"/>
@@ -2484,6 +2498,8 @@
 	<string id="7001" value="构架(&amp;S)"/>
 	<string id="7002" value="多重数值"/>
 	<string id="7003" value="多重"/>
+	<string id="7004" value="已经存在一个名为 &quot;%s&quot; 的过滤，您希望替换吗？"/>
+	<string id="7005" value="请命名您设置的过滤。"/>
 	<string id="8000" value="Shareaza 设置"/>
 	<string id="8001" value="欢迎来到 Shareaza"/>
 	<string id="8002" value="文件属性"/>
@@ -2552,7 +2568,7 @@
 	<string id="8162" value="连接完毕，请求浏览..."/>
 	<string id="8163" value="正在下载浏览回应 (%2.f%%)..."/>
 	<string id="8164" value="未能连接到主机以浏览用户。"/>
-	<string id="8165" value="未能下载下载文件列表。此主机可能不支持浏览功能。"/>  
+	<string id="8165" value="未能下载下载文件列表。此主机可能不支持浏览功能。"/>
 	<string id="8166" value="在此网络中搜索:"/>
 	<string id="8167" value="所有网络"/>
 	<string id="8176" value="搜索 Shareaza"/>
@@ -2562,6 +2578,7 @@
 	<string id="8180" value="文件大小必须为"/>
 	<string id="8181" value="&#160;到"/><!-- size from xx TO xx-->
 	<string id="8208" value="Shareaza 正在为 %i 个文件创建 Hash 值:"/>
+	<string id="8223" value="%i 天 %i 小时"/>
 	<string id="8224" value="Shareaza 正在下载:"/>
 	<string id="8225" value="此下载已暂停:"/>
 	<string id="8226" value="Shareaza 已经完成下载:"/>
@@ -2577,7 +2594,7 @@
 	<string id="8237" value="完成下载数量:"/>
 	<string id="8238" value="已知资源数量:"/>
 	<string id="8239" value="完成"/>
-	<string id="8240" value="Shareaza 正在移动下载:"/> 
+	<string id="8240" value="Shareaza 正在移动下载:"/>
 	<string id="8241" value="Shareaza 正在检测下载的错误:"/>
 	<string id="8243" value="已上传数量:"/>
 	<string id="8288" value="正在浏览您的 Shareaza 收藏"/>
@@ -2827,7 +2844,7 @@
 	<string id="16398" value="Shareaza 不能把 \n\n%s\n 更名为 \n%s"/>
 	<string id="16399" value="Shareaza 不能删除 \n\n%s"/>
 	<string id="16400" value="目标文件已存在:\n\n%s\n\n您要覆盖吗？"/>
-	<string id="16401" value="显示所有文件类型"/>   
+	<string id="16401" value="显示所有文件类型"/>
 	<string id="16402" value="Shareaza 已经收到一个收集文件:\r\n\r\n&quot;%s&quot;\r\n\r\n此文件可能不是一个有效的收集文件。"/>
 	<string id="16403" value="Shareaza 已经将收集文件 &quot;%s&quot; 添加到您的收藏中。"/>
 	<string id="16404" value="Shareaza 不能安装收集文件 &quot;%s&quot; 通过复制它到文件夹 &quot;%s&quot;。"/>
@@ -2893,13 +2910,14 @@
 	<string id="16803" value="您共享的文件夹是后面已共享文件夹的一部分:\n\n%s"/>
 	<string id="16804" value="您尚未在您的配置文件中输入屏幕名称。\n\n输入一个自定的屏幕名称是非常有益的，它可以使其他用户看见它们与谁连接。\n\n您确定要继续而不带有屏幕名称吗？"/>
 	<string id="16805" value="您尚未在您的配置文件中输入您的地址。\n\n输入您的地址是非常有益的，它可以使其他用户看见您来自于何处。\n\n您确定要继续而不输入您的地址吗？"/>
-	<string id="16806" value="您已表明您希望在您的 NAT 路由或防火墙上设立端口映射。\n\n请配置您的网络将 TCP 和 UDP 端口 %i 映射到您的本地计算机。"/>   
+	<string id="16806" value="您已表明您希望在您的 NAT 路由或防火墙上设立端口映射。\n\n请配置您的网络将 TCP 和 UDP 端口 %i 映射到您的本地计算机。"/>
 	<string id="16807" value="请输入您希望设置的带宽限制，以格式 &quot;123 kb/s&quot; 千比特每秒，或 &quot;123 KB/s&quot; 千字节每秒。"/>
 	<string id="16808" value="您没有选择您的年龄和性别。您确定要继续而不加理会吗？"/>
 	<string id="16809" value="退出(_X)"/>
 	<string id="16810" value="岁"/>
 	<string id="16811" value="自动"/>
 	<string id="16816" value="eDonkey 网络使用需要等待很长时间的队列。限制最大可接受的队列位置如果非常严格的话，您可能难以开始下载。\n您确定要限制您能接受的队列位置吗？"/>
+	<string id="16817" value="Windows 系统不支持超过 256 个字符的文件路径。\n请选择一个较短路径的文件夹。"/>
 	<string id="16864" value="正在查询主机探索服务..."/>
 	<string id="16865" value="正在查询探索服务 &quot;%s&quot;..."/>
 	<string id="16866" value="G网缓存处理成功 (&quot;%s&quot;)。"/>
@@ -2929,7 +2947,7 @@
 	<string id="16995" value="此文件可能已损坏，或者您可能没有安装合适的编码解码器。"/>
 	<string id="16996" value="此文件的某一部分不能播放，您可能需要下载额外的编码解码器。"/>
 	<string id="16997" value="没有文件被播放。请在您的收藏中双击媒体文件进行播放。"/>
-	<string id="16998" value="S &#160; &#160; H &#160; &#160; A &#160; &#160; R &#160; &#160; E &#160; &#160; A &#160; &#160; Z &#160; &#160; A &#160; &#160; &#160; &#160; &#160; 媒 &#160; &#160; &#160; &#160; &#160; 体 &#160; &#160; &#160; &#160; &#160; 系 &#160; &#160; &#160; &#160; &#160; 统"/> <!-- on one line -->
+	<string id="16998" value="S &#160; &#160; H &#160; &#160; A &#160; &#160; R &#160; &#160; E &#160; &#160; A &#160; &#160; Z &#160; &#160; A &#160; &#160; &#160; &#160; &#160; 媒 &#160; &#160; &#160; &#160; &#160; 体 &#160; &#160; &#160; &#160; &#160; 系 &#160; &#160; &#160; &#160; &#160; 统"/><!-- on one line -->
 	<string id="16999" value="播 放 列 表"/>
 	<string id="17024" value="初始化连接到 %s..."/>
 	<string id="17025" value="未能创建到 %s 的连接。"/>
@@ -3022,7 +3040,6 @@
 	<string id="17477" value="与 %s 的 BitTorrent 联结回应以错误的文件。"/>
 	<string id="17478" value="与 %s 的 BitTorrent 联结请求了错误的文件。"/>
 	<string id="17479" value="与 %s 的 BitTorrent 联结已为 &quot;%s&quot; 建立。"/>
-	<string id="17480" value="与 %s 的 BitTorrent 联结已丢失。"/>
 	<string id="17481" value="已接收 BitTorrent 描述符文件: &quot;%s&quot;"/>
 	<string id="17482" value="未能分析 BitTorrent 预取文件 &quot;%s&quot;。"/>
 	<string id="17483" value="BitTorrent Tracker 回应错误 &quot;%s&quot; : &quot;%s&quot;。"/>
@@ -3041,6 +3058,8 @@
 	<string id="17496" value="在从 &quot;%s&quot; 复制文件到 BitTorrent 共享文件时发生错误。"/>
 	<string id="17497" value="在尝试做种 &quot;%s&quot; 时发生未知错误。"/>
 	<string id="17498" value="在文件 &quot;%s&quot; 中检测到错误。"/>
+	<string id="17500" value="Tracker 未回应 - 重试宣告 (%i 于 %i)"/>
+	<string id="17501" value="未能与 Tracker 进行通讯"/>
 	<string id="18496" value="您在名称区域进行了变动。您确定要重命名下载吗？"/>
 	<string id="18497" value="您已经输入了一个 SHA1 值，但它是无效的。请检查并重试。"/>
 	<string id="18498" value="您已经输入了一个根 tiger-tree 值，但它是无效的。请检查并重试。"/>
@@ -3061,6 +3080,8 @@
 	<string id="19002" value="未能接受连接，链接不可用。"/>
 	<string id="20000" value="无 URN 可用"/>
 	<string id="20002" value="于"/><!-- 例如: 1 于 10 -->
+	<string id="20003" value="变更界面方向需要重新启动。\n您需要手动启动 Shareaza。立即退出？"/>
+	<string id="20004" value="您的操作系统不支持从右向左方向的语言。"/>
 	<string id="20100" value="连接中"/>
 	<string id="20101" value="请求中"/>
 	<string id="20102" value="回应"/>
@@ -3399,7 +3420,7 @@
 		<control caption="显示 BitTorrent 额外的界面元素"/>
 		<control caption="下载连接(_D):"/>
 		<control/><control/>
-		<control caption="个 Torrents 一次"/>
+		<control caption="个 Torrent 一次"/>
 		<control/><control/>
 		<control caption="个客户端连接"/>
 		<control caption="&#160;清除已下载的 Torrent&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当共享比率达到"/>
@@ -3521,7 +3542,7 @@
 		<control caption="您的互联网连接是否有防火墙保护，或者使用了 NAT 路由器？"/>
 		<control caption="&#160;是，我可以完全访问互联网| 不，但我将为 Shareaza 设置端口映射| 不，所以我无法从互联网接受传入连接| 我不知道，请自动选择防火墙状态"/>
 		<control caption="如果您知道互联网连接速度，请在下面做出选择:"/>
-		<control caption="| 调制解调器拨号| ISDN| ADSL (256K)| ADSL (512K)| ADSL (768K)| ADSL (1.5M)| Cable Modem/SDSL| T1| T3| LAN| OC3"/>
+		<control caption="| 调制解调器拨号| ISDN| ADSL (256K)| ADSL (512K)| ADSL (768K)| ADSL (1.5M)| ADSL (4.0M)| ADSL2 (8.0M)| ADSL2 (12.0M)| ADSL2+ (24.0M)| Cable Modem/SDSL| T1| T3| LAN| OC3"/>
 		<control caption="或选择:"/>
 		<control/>
 	</dialog>
